[package]
name = "xorsum"
version = "4.0.0"
edition = "2021"
description = "Get XOR hash/digest with this command-line tool"
keywords = ["checksum", "hash", "xor", "file", "data"]
categories = ["command-line-utilities", "algorithms"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Rudxain/xorsum"
documentation = "https://docs.rs/xorsum"
exclude = [".*"]

[dependencies]
clap = {version = "3.2.17", features = ["derive"]}

[profile.release]
strip = true
lto = true
codegen-units = 1
#opt-level = 3 #to-do: try different values
