[package]
name = "xorsum"
version = "4.4.0"
edition = "2024"
description = "Get XOR hash/digest with this command-line tool"
keywords = ["checksum", "hash", "xor", "file", "data"]
categories = ["command-line-utilities", "algorithms"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Rudxain/xorsum"
documentation = "https://docs.rs/xorsum"
exclude = [".*", "*CONTRIBUTING*"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
